css/main.css
* {
	margin: 0;
	padding: 0;
	border: 0;
	outline: 0;
	font-family: 'Varela', sans-serif;
	font-family: 'Lato', sans-serif;
}

body {
	overflow-y: scroll;
}

body, iframe {
	/* bg from http://subtlepatterns.com/ */
	background: url('/img/bg.png') #EBE9E3;
}

.menu {
	border-top: 0.2rem solid #4A3D34;
	min-width: 100%;
	height: 4.2rem;
	padding: 0 4rem;
	color: #fff;
	white-space: nowrap;
	box-sizing: border-box;
	-moz-box-sizing: border-box;
}


.menu_scroll_wrapper {
	width: 100%;
	overflow-y: show;
	overflow-x: auto;
	box-shadow: 0 0.1rem 0.3rem #4A3D34;
	background: #403329;
	height: 4.2rem;
	z-index: 9001;
	position: fixed;
	top: 0;
}


.menu a {
	display: inline-block;

	padding:0rem 2.5rem;
	margin-top: -0.2rem;
	border-top: 0.2rem solid transparent;

	color: #fff;
	text-decoration: none;
	font-size: 1.2em;

	height: 4rem;
	line-height: 4rem;
	vertical-align: middle;

}

.menu a:hover {
	background: #4A3D34;
}

.menu a:active, .menu a.active {
	border-top: 0.2rem solid #E12617;
	background: #4A3D34;
}

.cont {
	margin-right: 2rem;
	margin-left: 4rem;
	margin-top: 6.3rem;
}

.anchorhack {
	padding-top: 6.3rem;
}

.main_left {
	width: 100%;
	display: block;
	float:left;
	vertical-align: top;
	padding-right: 30rem;
	box-sizing: border-box;
	-moz-box-sizing: border-box;
	padding-bottom: 2rem;
}

.main_left > h1:first-child {
	margin-top: 0;
}

.main_right {
	width: 25rem;
	float: right;
	display: block;

	background: url(/img/noname.svg) top center no-repeat local;
	background-size: 22em;
	padding-top: 8rem;

	position: absolute;
	top: 6rem;
	right: 2rem;

	position: fixed;
	overflow-y: auto;
	max-height: calc(100% - 15.5rem);
}


h1 {
	font-size: 1.7em;
	margin-top: 1em;
	margin-bottom: 0.3em;
}

p {
	text-align: justify;
	margin: 0.2em 0;
	margin-bottom: 0.6em;
	line-height: 1.3em;
	-ms-hyphens: auto;
	-webkit-hyphens: auto;
	-moz-hyphens: auto;
	hyphens: auto;
}


.cont a {
	color: rgb(38, 151, 222);
	text-decoration: none;
}

.cont a:hover {
	color: rgb(72, 174, 239);
	text-decoration: underline;
}

.highlight {
	padding: 0.5em;
	font-size: 1.1em;
}

.highlight *, pre {
	font-family: monospace;
}

address {
	white-space: pre;
	margin-top: -1.4rem;
}

#map {
	clear: both;
	height: 400px;
}

.qrcode {
	width: 10em;
	float: right;
	display: inline-block;
	text-align: center;
	margin: 0.7rem;
	margin-top: -2rem;
}

.qrcode img {
	width: 100%;
}


iframe {
	position: fixed;
	top: 5rem;
	left: 0rem;
	width: 100%;
	height: 100%;
	padding-bottom: 5rem;
	box-sizing: border-box;
	-moz-box-sizing: border-box;
	z-index: 9000;
	border: 0;
}

table {
	width: 100%;
	table-layout: fixed;
}

th, td {
	text-align: left;
	vertical-align: top;
}

th:first-child {
	width: 5.5rem;
	padding-right: 1rem;
	white-space: nowrap;
}

.just {
	text-align: justify;
}

tr.space td {
	padding-bottom: 2rem;
}

tr.space td:last-child {
	text-align: right;
}

.dim {
	color: #888;
}


label {
	width: 8rem;
	display: inline-block;
	padding: 0.5rem 0;
}

label + input {
	display: include-block;
	width: 20rem;
}

input, textarea {
	padding: 0.4em;
	border: 1px solid #666;
	border-radius: 0.2rem;
}

input:focus, textarea:focus {
	border: 1px solid #114566;
	box-shadow: 0 0 0.2rem rgb(38, 151, 222);;
}

input[type='submit'] {
	margin: 1rem 0;
	min-width: 8rem;
}

table, td, th, tr {
	margin: 0;
	padding: 0;
	border-collapse:collapse;
}

.yarpnarp {
	margin-top: 0.5rem;
}

.yarpnarp td, .yarpnarp th {
	text-align: left;
	overflow: hidden;
	white-space: nowrap;
	text-overflow: ellipsis;
	padding: 0.4rem;
}

.yarpnarp td:nth-child(odd) {
	width: 35%;
}

.yarpnarp td:nth-child(even) {
	width: 65%;
	color: #666;
	text-align: right;
}

.yarpnarp .header {
	background: rgba(0,0,0, 0.05);
	border-bottom: 0.1rem solid rgba(0,0,0, 0.2);
}

.yarpnarpstatus {
	margin-bottom: 1rem;
	padding: 0.5rem;
}

.yarpnarpstatus.yarp {
	background: rgba(0, 100, 0, 0.2);
}

.yarpnarpstatus.narp {
	background: rgba(100, 0, 0, 0.2);
}

